// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Badge Component Snapshot testing hauria de coincidir amb el snapshot amb props per defecte 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#A2FFC8",
        "borderColor": "#30D270",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#007931",
        },
        undefined,
      ]
    }
  >
    Snapshot Test
  </Text>
</View>
`;

exports[`Badge Component Snapshot testing hauria de coincidir amb el snapshot amb props personalitzades 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#123456",
        "borderColor": "#ABCDEF",
        "borderWidth": 1.25,
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#FFFFFF",
        },
        {
          "fontSize": 14,
        },
      ]
    }
  >
    Custom Badge
  </Text>
</View>
`;
